--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,22 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
+  <EditText
+    android:id="@+id/mainName"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:ems="10"
+    android:inputType="textPersonName"
+    android:text="Hint"
+    tools:layout_editor_absoluteX="92dp"
+    tools:layout_editor_absoluteY="206dp" />
+
+  <Button
+    android:id="@+id/mainGoButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Button"
+    tools:layout_editor_absoluteX="159dp"
+    tools:layout_editor_absoluteY="271dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
