--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
   tools:context=".MainActivity">
 
   <TextView
+    android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Hello World!"
@@ -19,18 +20,22 @@
     android:id="@+id/mainName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="206dp"
     android:ems="10"
     android:inputType="textPersonName"
     android:text="Hint"
-    tools:layout_editor_absoluteX="92dp"
-    tools:layout_editor_absoluteY="206dp" />
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
   <Button
     android:id="@+id/mainGoButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
     android:text="Button"
-    tools:layout_editor_absoluteX="159dp"
-    tools:layout_editor_absoluteY="271dp" />
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/mainName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
