--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:text="Button"
+    android:onClick="openGreetings"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/mainName" />
